--- a/templates/macros.html
+++ b/templates/macros.html
@@ -164,7 +164,7 @@
 <div class="footer-black">
   <div class="text-block">
     {% if config.extra.name %}
-    <p>By Parker Lamb</p>
+    <p>By Tanks Transfeld</p>
     {% endif %}
     {% if config.extra.email %}
     <p>Drop me a letter at <a href="mailto:{{ config.extra.email }}">{{config.extra.email}}</a></p>
